<resources>
    <string name="app_name">AtmaSalon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="APP_TOKEN">pk.eyJ1IjoicHVqYXlhbmEiLCJhIjoiY2t1bDdhZ3hiM2Z6NDJvbzhsdHgxdmFsbCJ9.V9W8Y1dk_4BR5xfeCpoROg</string>
    <string name="user_location_permission_explanation">Apakah diperbolehkan?</string>
    <string name="user_location_permission_not_granted">Ditolak</string>
    <string name="mohawk">Mohawk</string>
    <string name="keriting">Keriting</string>
    <string name="lurus">Lurus</string>
    <string name="hitam">Hitam</string>
    <string name="cokelat">Cokelat</string>
    <string name="silver">Silver</string>
    <string name="merah">Merah</string>
    <string name="oranye">Oranye</string>
    <string name="tentang">Tentang Kami</string>
    <string name="tentang_kami">
        <u>Tentang Kami</u>.
    </string>
    <string name="tentang_kami_new">Tentang Kami</string>
    <string name="kelompok_6">Kelompok 6</string>
    <string name="putu_gede_pujayana">Putu Gede Pujayana</string>
    <string name="_190710088">190710088</string>
    <string name="yotam_niki_rahardja">Yotam Niki Rahardja</string>
    <string name="_190710171">190710171</string>
    <string name="yohan_hadi_wijaya">Yohan Hadi Wijaya</string>
    <string name="_190710182">190710182</string>
    <string name="temukan">Temukan Kami</string>
    <string name="alamat">Alamat: Jl. Babarsari No.43, Janti, Caturtunggal, Kec. Depok, Kabupaten Sleman, Daerah Istimewa Yogyakarta 55281</string>
    <string name="image">image</string>
    <string name="masukan_jumlah_saldo">Masukan Jumlah Saldo</string>
    <string name="data_riwayat_masih_kosong">Data Riwayat masih kosong</string>
    <string name="mulai_reservasi">Mulai Reservasi</string>
    <string name="isi_formulir">Isi Formulir:</string>
    <string name="pilih_salon_terdekat">Pilih salon terdekat</string>
    <string name="nama_pemesan">Nama Pemesan</string>
    <string name="nomor_telepon_pemesan">Nomor Telepon Pemesan</string>
    <string name="model_rambut">Model Rambut:</string>
    <string name="pilihan_warna">Pilihan Warna:</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="wendywinata_atmasalon_com">wendywinata@atmasalon.com</string>
    <string name="keluar">Keluar</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="total_harga">Total Harga</string>
    <string name="saldo_tidak_cukup">Saldo Tidak Cukup</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="selamat_datang">Selamat datang,</string>
    <string name="wendy_winata">Wendy Winata</string>
    <string name="anda_dapat_melengkapi_profil_anda_dengan_tombol_di_bawah_ini">Anda dapat melengkapi profil anda dengan tombol di bawah ini</string>
    <string name="lihat_profil">Lihat Profil</string>
    <string name="saldo_anda">Saldo anda,</string>
    <string name="rp_152_000_00">Rp. 152.000,00</string>
    <string name="tambah_saldo">Tambah Saldo</string>
    <string name="anda_dapat_melakukan_reservasi_dengan_menekan_tombol_di_bawah_ini">Anda dapat melakukan reservasi dengan menekan tombol di bawah ini</string>
    <string name="reservasi">Reservasi</string>
    <string name="form_daftar">Form Daftar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="ulangi_kata_sandi">Ulangi Kata Sandi</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="sudah_punya_akun">Sudah punya akun? </string>
    <string name="form_masuk">Form Masuk</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun? </string>
    <string name="daftar">Daftar</string>
    <string name="beranda">Beranda</string>
    <string name="riwayat">Riwayat</string>
    <string name="profil">Profil</string>
    <string name="kembali">Kembali</string>
    <string name="textV">/</string>
    <string name="atma_salon">Atma Salon</string>
    <string name="nama_page">Nama Page</string>
    <string name="salon">Salon</string>
    <string name="lokasi_salon">Lokasi Salon</string>
    <string name="nama">Nama</string>
    <string name="no_telepon">No. Telepon</string>
    <string name="model">Model</string>
    <string name="warna">Warna</string>
    <string name="status">Status</string>
    <string name="edit_testimoni">Edit Testimoni</string>
    <string name="hapus_testimoni">Hapus Testimoni</string>
    <string name="tambah_testimoni">Tambah Testimoni</string>
    <string name="testimoni">Testimoni</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="form_edit">Form Edit</string>
    <string name="edit">Edit</string>
    <string name="tutup_akun">Tutup Akun</string>
    <string name="chart_penggunaan_aplikasi">
        <u>Chart Penggunaan Aplikasi</u>.
    </string>
</resources>