<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.FragmentDashboard"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/data_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:orientation="horizontal"
                android:background="@drawable/custom_box">

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:orientation="vertical"
                    android:padding="25dp">

                    <TextView
                        android:fontFamily="@font/playfair_display_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/selamat_datang"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:fontFamily="@font/playfair_display_bold"
                        android:id="@+id/dashboardProfileName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/wendy_winata"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:fontFamily="@font/inter_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/anda_dapat_melengkapi_profil_anda_dengan_tombol_di_bawah_ini"
                        android:textAlignment="textStart"
                        android:textColor="@color/secondary"
                        android:textSize="12sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnLihatProfil"
                        android:fontFamily="@font/inter_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginTop="15dp"
                        android:paddingHorizontal="15dp"
                        android:background="@drawable/custom_border"
                        android:text="@string/lihat_profil"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/notify"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginStart="-175dp"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/notif"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="bottom|end"
                    android:src="@drawable/branding" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/data_saldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/data_profil"
            android:layout_gravity="center"
            android:gravity="center"
            android:backgroundTint="@color/white"
            android:orientation="horizontal"
            android:paddingVertical="25dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/updown"
                android:contentDescription="@string/image"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:fontFamily="@font/inter_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saldo_anda"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

                <TextView
                    android:fontFamily="@font/inter_regular"
                    android:id="@+id/dashboardProfileSaldo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rp_152_000_00"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="fill_parent"
                android:layout_marginHorizontal="15dp"
                android:src="@drawable/statistic"
                android:contentDescription="@string/image"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTambahSaldo"
                    android:fontFamily="@font/inter_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginTop="15dp"
                    android:paddingHorizontal="15dp"
                    android:background="@drawable/custom_border"
                    android:text="@string/tambah_saldo"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/data_saldo"
            android:layout_gravity="start"
            android:background="@drawable/boxwhite"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="25dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="175dp"
                android:layout_marginHorizontal="15dp"
                android:src="@drawable/communication" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/anda_dapat_melakukan_reservasi_dengan_menekan_tombol_di_bawah_ini"
                android:textAlignment="center"
                android:textColor="@color/secondary"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnReservasi"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_border"
                android:fontFamily="@font/inter_regular"
                android:paddingHorizontal="25dp"
                android:text="@string/reservasi"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/btnTentangKami"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reser"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/tentang_kami"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="15sp" />


    </RelativeLayout>
</layout>