<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/HeaderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atma_salon"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7" />

            <TextView
                android:id="@+id/slash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textV"
                android:textColor="@color/primary_green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.015"
                app:layout_constraintStart_toEndOf="@+id/app_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7" />

            <TextView
                android:id="@+id/page_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tentang"
                android:textColor="@color/primary_green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.015"
                app:layout_constraintStart_toEndOf="@+id/slash"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/user"
                app:civ_border_color="@color/white"
                app:civ_border_width="0.5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/scrollViewPage"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/HeaderLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/about_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/playfair_display_bold"
                    android:text="@string/tentang_kami_new"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/kelompok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/about_title"
                    android:layout_marginBottom="25dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/kelompok_6"
                    android:textAlignment="center"
                    android:textColor="@color/yellow"
                    android:textSize="20sp" />

                <!-- Pujayana -->
                <LinearLayout
                    android:id="@+id/pujayana"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/kelompok"
                    android:layout_gravity="start"
                    android:layout_marginBottom="25dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/custom_image"
                        android:contentDescription="@string/image"
                        android:src="@drawable/pujayana" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/playfair_display_bold"
                            android:text="@string/putu_gede_pujayana"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_regular"
                            android:text="@string/_190710088"
                            android:textAlignment="textStart"
                            android:textColor="@color/primary_green"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Yotam -->
                <LinearLayout
                    android:id="@+id/yotam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pujayana"
                    android:layout_gravity="start"
                    android:layout_marginBottom="25dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/custom_image"
                        android:contentDescription="@string/image"
                        android:src="@drawable/yotam" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/playfair_display_bold"
                            android:text="@string/yotam_niki_rahardja"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_regular"
                            android:text="@string/_190710171"
                            android:textAlignment="textStart"
                            android:textColor="@color/primary_green"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Yohan -->
                <LinearLayout
                    android:id="@+id/yohan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/yotam"
                    android:layout_gravity="start"
                    android:layout_marginBottom="25dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/custom_image"
                        android:contentDescription="@string/image"
                        android:src="@drawable/yohan" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/playfair_display_bold"
                            android:text="@string/yohan_hadi_wijaya"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_regular"
                            android:text="@string/_190710182"
                            android:textAlignment="textStart"
                            android:textColor="@color/primary_green"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/temukanKami"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/playfair_display_bold"
                    android:text="@string/temukan"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/alamatKami"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/alamat"
                    android:textAlignment="center"
                    android:textColor="@color/primary_green"
                    android:textSize="15sp" />

                <!-- Geolocation -->
                <com.mapbox.mapboxsdk.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@id/alamatKami"
                    android:layout_marginBottom="20dp"
                    mapbox:mapbox_cameraTargetLat="40.74581"
                    mapbox:mapbox_cameraTargetLng="-73.99155"
                    mapbox:mapbox_cameraZoom="11" />

                <!-- Chart -->
                <FrameLayout
                    android:id="@+id/wrapChart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="25dp">
                    <com.anychart.AnyChartView
                        android:id="@+id/chart"
                        android:layout_width="match_parent"
                        android:layout_height="350dp" />
                    <ProgressBar
                        android:id="@+id/progressbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />
                </FrameLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnKembali"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/wrapChart"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/custom_border"
                    android:backgroundTint="#B94343"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/kembali"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </ScrollView>


    </RelativeLayout>


</layout>